k8s/monitoring/kibana-ext.dev2.yml
---
kind: Service
apiVersion: v1
metadata:
  namespace: dev2
  name: kibana-ext
spec:
 type: ExternalName
 externalName: kibana.monitoring.svc.cluster.local
 ports:
 - port: 5601
   name: webinterface
---
