k8s/monitoring/monitoring.env.dev.yml
---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: kibana-ext
spec:
 type: ExternalName
 externalName: kibana.monitoring.svc.cluster.local
 ports:
 - port: 5601
   name: webinterface
---
kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: apm-server-ext
spec:
 type: ExternalName
 externalName: apm-server.monitoring.svc.cluster.local
 ports:
 - port: 8200
   name: apm-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: monitoring-apm-ingress
  namespace: dev
spec:
  tls:
  - hosts:
    - api.dev.kauri.io
    secretName: dev-apm-monitoring-tls
  rules:
    - host: api.dev.kauri.io
      http:
        paths:
        - backend:
            serviceName: apm-server-ext
            servicePort: 8200
          path: /monitoring/apm-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
  name: monitoring-kibana-ingress
  namespace: dev
spec:
  tls:
  - hosts:
    - api.dev.kauri.io
    secretName: dev-kibana-monitoring-tls
  rules:
    - host: api.dev.kauri.io
      http:
        paths:
        - backend:
            serviceName: kibana-ext
            servicePort: 5601
          path: /monitoring/ui
---
